--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ highlight:
   enable: true
   line_number: true
   auto_detect: false
-  tab_replace:
+  tab_replace: '    '
   
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -73,7 +73,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hueman
+theme: landscape 
+#hueman
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
